--bug=1023361 --user=刘泽潭 【上海宝坚建筑劳务有限公司 】【手机端】【安卓】安卓手机签名的时候可以上传空白图，不签名直接点击确定 https://www.tapd.cn/23787791/s/1214336

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,15 @@ def safeExtGet(prop, fallback) {
 }
 
 apply plugin: 'com.android.library'
+buildscript {
+    repositories {
+        mavenCentral()
+        google() // or jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.1.0'   //last version Jan 2016
+    }
+}
 
 android {
     compileSdkVersion safeExtGet('compileSdkVersion', 23)
